<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Closed Loop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello</string>
    <string name="sync_button">Sync</string>
    <string name="cgm_graph_button">CGM Graph</string>
    <string name="title_activity_cgmgraph">CGMGraph</string>
    <string name="title_activity_full_screen_bg">FullScreenBG</string>
    <string name="open_night_button">Night</string>
    <string name="button_snooze_alarm">Snooze Alarm</string>
    <string name="title_activity_enter_meal">EnterMealActivity</string>
    <string name="newMealButton">Add Meal</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="nav_option1">Home</string>
    <string name="nav_option2">Add Meal</string>
    <string name="nav_option3">Graph</string>
    <string name="nav_option4">Night</string>
    <string name="nav_option5">Settings</string>
    <string name="nav_option6">Day Graph</string>
    <string name="nav_option7">Other</string>
    <string name="buttonPrev">Prev</string>
    <string name="buttonNext">Next</string>

    <string-array name="dataOptions">
        <item>Log</item>
        <item>Course</item>
        <item>Injections</item>
        <item>Alerts</item>
        <item>Automode Switch</item>
        <item>Shutdown</item>
    </string-array>
    <string-array name="dayGraphTimeOptions">
        <item>Day</item>
        <item>Night</item>
        <item>Full Day</item>
    </string-array>

    <string name="title_activity_settings">Settings Activity</string>
    <string name="buttonAutomode">Automode Switch</string>
    <string name="buttonPowerSwitch">Power Switch</string>
    <string name="buttonRunAllTests">Run All Tests</string>
    <string name="buttonAddSampleData">Add Sample Data</string>
    <string name="buttonClearDB">Clear DB</string>
    <string name="title_activity_day_graph">DayGraphActivity</string>

</resources>