<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.erjr.cloop.main.SettingsActivity" >

    <GridLayout
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:columnCount="2"
        android:rowCount="5" >

        <Button
            android:id="@+id/automodeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:onClick="automodeSwitch"
            android:text="@string/buttonAutomode" />

        <TextView
            android:id="@+id/currentAutomode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="Current Automode"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />

        <Button
            android:id="@+id/powerSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:onClick="powerSwitch"
            android:text="@string/buttonPowerSwitch" />

        <TextView
            android:id="@+id/currentSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="Current Switch"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />
        
        <Button
            android:id="@+id/runAllTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:onClick="runAllTests"
            android:text="@string/buttonRunAllTests" />
        
        <TextView
            android:id="@+id/testResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="Test Results"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />
        
                <Button
            android:id="@+id/addSampleData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:onClick="addSampleData"
            android:text="@string/buttonAddSampleData" />
        
        <TextView
            android:id="@+id/sampleDataResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:text="Sample data not yet loaded"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />
        
                <Button
            android:id="@+id/clearDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:onClick="clearDB"
            android:text="@string/buttonClearDB" />
        
        <TextView
            android:id="@+id/clearDBResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:text="Database not yet cleared."
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />
    </GridLayout>

    <fragment
        android:id="@+id/navigation_drawer_fragment"
        android:name="com.erjr.cloop.main.NavigationDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start" />

</android.support.v4.widget.DrawerLayout>